hphp/hack/test/typecheck/expression_trees/self_static_method_call.php.exp
File "self_static_method_call.php", line 13, characters 22-37:
Static method calls in expression trees require explicit class names. (Parsing[1002])
File "self_static_method_call.php", line 13, characters 32-36:
Invalid argument (Typing[4110])
  File "self_static_method_call.php", line 7, characters 5-18:
  Expected `ExampleContext`
  File "self_static_method_call.php", line 13, characters 32-36:
  But got `string`
